--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "리액트로 구현하는 리얼 월드 프로젝트",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "(cd client && yarn dev)",
+    "install" : "(cd client && yarn install)",
+    "build": "(cd client && yarn build)",
+    "start": "(cd client && yarn start)"
   },
   "repository": {
     "type": "git",
@@ -32,14 +32,7 @@
     "url": "https://github.com/pagers-org/react-world/issues"
   },
   "homepage": "https://github.com/pagers-org/react-world#readme",
-  "dependencies": {
-    "next": "^13.4.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.48.0",
